opam-version: "2.0"
synopsis: "Minimal desktop calculator"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/lindig/tcalc"
bug-reports: "https://github.com/lindig/tcalc/issues"
depends: [
  "dune" {build}
  "linenoise"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/lindig/tcalc.git"
